# hs-libdrm

./: .gitignore  Makefile  kms.cabal  main.hs  open-src  test
src/Graphics/KMS/: Connector.hsc  Crtc.hsc  Encoder.hsc  ModeInfo.hsc  Resources.hsc  Types.hs  Utils.hs
src/Graphics/KMS/Internals/: Utils.hs
src/System/: DRM.hs
src/System/DRM/: BufferObject.hs  FFIUtils.hs  FrameBuffer.hs  FrameBuffer.hsc  Types.hs
src/System/DRM/BufferObject/: Dumb.hsc
src/System/DRM/C/: FrameBuffer.hsc
src/System/DRM/C/KMS/: Connector.hsc  Crtc.hsc  Encoder.hsc  FrameBuffer.hsc  ModeInfo.hsc  Resources.hsc
src/System/DRM/KMS/: Connector.hs  Connector.hsc  Crtc.hs  Crtc.hsc  Encoder.hs  Encoder.hsc  FrameBuffer.hs  ModeInfo.hs  ModeInfo.hsc  Resources.hs  Resources.hsc  Utils.hs
src/cbits/: dumb_mmap.c
