name: kms
version: 0.1
license: GPL
author: Léo Gillot-Lamure
maintainer: leo.gillot@navaati.net
category: System
build-type: Simple
cabal-version: >=1.8

library
  hs-source-dirs: src
  exposed-modules: System.DRM, System.DRM.Types, System.DRM.KMS.Crtc,
                   System.DRM.KMS.ModeInfo, System.DRM.KMS.Connector,
                   System.DRM.KMS.Utils, System.DRM.KMS.Encoder,
                   System.DRM.KMS.Resources
  other-modules: System.DRM.FFIUtils
  build-depends: base, base-unicode-symbols, unix,
                 tagged, reflection
  extensions: UnicodeSyntax, FlexibleContexts, ScopedTypeVariables,
              TypeOperators, ForeignFunctionInterface
  ghc-options: -Wall
  build-tools: hsc2hs
  include-dirs: /usr/include/libdrm, /usr/include/libkms
  extra-libraries: drm, kms
