name: kms
version: 0.1
license: GPL
author: Léo Gillot-Lamure
maintainer: leo.gillot@navaati.net
category: System
build-type: Simple
cabal-version: >=1.8

library
  hs-source-dirs: src
  exposed-modules: System.DRM
                   ,System.DRM.Types
                   ,System.DRM.KMS.Crtc
                   ,System.DRM.KMS.ModeInfo
                   ,System.DRM.KMS.Connector
                   ,System.DRM.KMS.Utils
                   ,System.DRM.KMS.Encoder
                   ,System.DRM.KMS.Resources
                   ,System.DRM.BufferObject
                   ,System.DRM.BufferObject.Dumb
                   ,System.DRM.FrameBuffer
  other-modules: System.DRM.FFIUtils
                 ,System.DRM.C.KMS.ModeInfo
                 ,System.DRM.C.KMS.Crtc
                 ,System.DRM.C.KMS.Encoder
                 ,System.DRM.C.KMS.Connector
                 ,System.DRM.C.KMS.Resources
                 ,System.DRM.C.FrameBuffer
  build-depends: base
                 ,base-unicode-symbols
                 ,unix
                 ,tagged
                 ,reflection
                 ,bindings-DSL
  extensions: UnicodeSyntax
              ,FlexibleContexts
              ,ConstraintKinds
  ghc-options: -Wall
  build-tools: hsc2hs
  pkgconfig-depends: libdrm
